SUBDIRS = io

EXTRA_DIST  = 125hex.g \
              1hex.g \
              1khex.g \
              1tet.g \
              3k-tri-cube.h5m \
              3k-tri-sphere.vtk \
              4k-tri-plane.vtk \
              4tet.g \
              8hex.g \
              cell1.gen.gz \
              cell2.gen.gz \
              mb_big_test.g.gz \
              mbtest1.g \
              mbtest2.g \
              mbtest3.g \
              test.g \
              testquad-cyl.g \
              testquad.g \
              testtet.g \
	      ptest.cub \
              64bricks_512hex.h5m \
              partBed.smf \
              PB.h5m  \
              polyPB.txt \
              polyline.txt \
              quads.h5m \
              SECrop2.h5m \
              poly14.txt \
              BedCrop2.h5m

