SUBDIRS = dagmc h5file io iGeom mbcslam

EXTRA_DIST = 125hex.g \
             16_unmerged_hex.h5m \
             merge_with_tag.h5m \
             1hex.g \
             1khex.g \
             1tet.g \
             3k-tri-cube.h5m \
             3k-tri-sphere.vtk \
             4k-tri-plane.vtk \
             4tet.g \
             8hex.g \
             cell1.gen.gz \
             cell2.gen.gz \
             mb_big_test.g.gz \
             mbtest1.g \
             mbtest1.vtk \
             mbtest2.g \
             mbtest3.g \
             test.g \
             testquad-cyl.g \
             testquad-cyl.h5m \
             testquad.g \
             testtet.g \
             ptest.cub \
             64bricks_512hex.h5m \
             64bricks_1khex.h5m \
             64bricks_12ktet.h5m \
             partBed.smf \
             PB.h5m \
             polyPB.txt \
             polyline.txt \
             quads.h5m \
             SECrop2.h5m \
             poly14.txt \
             BedCrop2.h5m \
             mpas_p8.h5m \
             twoPolyh.h5m \
             Homme_2pt.h5m \
             surfrandomtris-4part.h5m \
             hexes_mixed.vtk \
             32hex_ef.h5m \
             brick1.vtk \
             brick2.vtk \
             hex01.vtk \
             hex_2048.h5m \
             hex_2048.vtk \
             quad_1000.h5m \
             quad_1000.vtk \
             spectral.h5m

